# stm32_base_project

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
cmake/: arm_none_eabi_gcc_toolchain.cmake
src/: FreeRTOSConfig.h  linker_file.ld  main.c
